--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,25 @@ body {
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
+
+.carousel {
+    background: #512da8;
+    border-radius: 35px 35px 35px 35px;
+    overflow: hidden;
+}
+
+.carousel-item {
+    height: 300px;
+}
+
+.carousel-caption {
+    padding-left: 300px;
+    padding-bottom: 40px;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
+}
